--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,9 @@ label {
   display: flex;
   margin-bottom: 5px;
 }
-
+form{
+  max-width: 800px;
+}
 input[type="text"],
 input[type="email"],
 input[type="number"],
@@ -36,4 +38,23 @@ input[type="date"] {
 }
 button{
   margin-top: 10px;
+}
+.my-10{
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+.d-flex{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 10px;
+}
+.w-35{
+  width: 35%;
+}
+.w-20{
+  width: 20%;
+}
+.flex-1{
+  flex: 1;
 }
